Fix most site-wide image distortion
Adjust dropdown arrow size and spacing

Fix distortion of image in ImageText block

Fix presentation of project tech stack logos

Replace gallery placeholder images with real content

--- a/src/components/Blocks/Gallery/Gallery.module.scss
+++ b/src/components/Blocks/Gallery/Gallery.module.scss
@@ -6,6 +6,7 @@
     grid-template-rows: 1fr 1fr 1fr ;
     gap: 32px 20px;
     min-height: 400px;
+    max-height: 400px;
     align-content: center;
 
     @include mq-below(mid-large) {
@@ -17,66 +18,55 @@
         display: flex;
         flex-direction: column;
     }
-}
 
-.imageWrapper {
-    position: relative;
-    border-radius: 15px;
-
-    span, img {
+    img {
+        object-fit: cover;
         border-radius: 15px;
-    }
+        position: static !important;
+        overflow: hidden;
 
-    span {
-        width: 100%;
-        height: 100%;
-
-        img {
-            object-fit: cover;
+        &:nth-child(1) {
+            grid-row: 1/4;
+            grid-column: 1/2;
+            object-fit: contain !important;
         }
-    }
 
-    &:nth-child(1) {
-        grid-row: 1/4;
-        grid-column: 1/2;
-        object-fit: contain !important;
-    }
-
-    &:nth-child(2) {
-        grid-column: 2/3;
-        grid-row: 1/2;
-        object-fit: fill !important;
-    }
-
-    &:nth-child(3) {
-        grid-column: 3/4;
-        grid-row: 1/3;
-    }
-
-    &:nth-child(4) {
-        grid-column: 2/3;
-        grid-row: 2/4;
-    }
-
-    &:nth-child(5) {
-        grid-column: 3/4;
-        grid-row: 3/4;
-    }
-
-    @include mq-below(mid-large) {
-        &:nth-child(3) {
+        &:nth-child(2) {
             grid-column: 2/3;
-            grid-row: 4/7;
+            grid-row: 1/2;
+            object-fit: fill !important;
+        }
+
+        &:nth-child(3) {
+            grid-column: 3/4;
+            grid-row: 1/3;
+        }
+
+        &:nth-child(4) {
+            grid-column: 2/3;
+            grid-row: 2/4;
         }
 
         &:nth-child(5) {
-            grid-column: 1/2;
-            grid-row: 4/7;
+            grid-column: 3/4;
+            grid-row: 3/4;
         }
-    }
 
-    @include mq-below(mid-small) {
-        width: 100%;
-        height: 200px;
+        @include mq-below(mid-large) {
+            &:nth-child(3) {
+                grid-column: 2/3;
+                grid-row: 4/7;
+            }
+
+            &:nth-child(5) {
+                grid-column: 1/2;
+                grid-row: 4/7;
+            }
+        }
+
+        @include mq-below(mid-small) {
+            width: 100%;
+            height: 200px;
+        }
     }
 }
